package com.hallvardlaerum.libs.bilder;

public interface PlassIndikatorKomponentAktig {
    void oppdaterLayout(Integer lengde, Integer startplassIndeks);
}
